--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 
+
 {
   "rewrites": [
     {
       "source": "/helpers/:path*",
-      "destination": "https://helpers/:path*"
+      "destination": "https://helpers-ruddy.vercel.app/:path*"
     }
   ]
 }
