json file updated 2

--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,12 @@
     },
     {
       "source": "/helpers/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "nesthelpers.com"
+        }
+      ],
       "destination": "https://helpers-ruddy.vercel.app/:path*"
     }
   ]
