--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Airtable API Key - Keep this file out of Git
+assets/js/airtable-config.js
+
 # Node modules
 node_modules/
 
@@ -8,7 +11,4 @@ node_modules/
 # OS files
 .DS_Store
 Thumbs.db
-
-# Note: airtable-config.js is in Git with encoded API key
-# This prevents GitHub secret scanning while still working on Vercel
 
